[tool.poetry]
name = "rsa-encryption-project"
version = "0.1.0"
description = ""
authors = ["thomas-cardon <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
PyAudio = "^0.2.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
